<resources>
    <string name="app_name">FinalProject</string>

    <!--    Project Names and Descriptions-->
    <string name="project_pexels">Pexels</string>
    <string name="desc_pexels">Search Images from Pexels using API</string>

    <string name="project_owlbot_dictionary">Owlbot Dictionary</string>
    <string name="desc_owlbot_dictionary">Search word meanings from the dictionary</string>

    <string name="project_covid19_tracker">Covid19 Information Tracker</string>
    <string name="desc_covid19_tracker">Get Information of Covid19 Cases</string>

    <string name="project_carbon_dioxide">Carbon Dioxide Interface</string>
    <string name="desc_carbon_dioxide">Get Carbon DIoxide Emission details</string>


    <string name="owlbot_search_hint">Enter word here</string>
    <string name="owlbot_search">Search</string>
    <string name="owlbot_side_nav_search">Owlbot Dictionary Search</string>
    <string name="owlbot_side_nav_saved">Owlbot Dictionary Saved Definitions</string>
    <string name="owlbot_okay">Got It!</string>
    <string name="owlbot_help">1. Enter a word.\n2.Click Search Button\n3. You will see a list of definitions. Click on then for more details or to save them.</string>
    <string name="activity_owlbot_dictionary">Activity: Owlbot Dictionary</string>
    <string name="owlbot_dictionary_version">Version: 1</string>
    <string name="author_owlbot_dictionary">Author: Sanket Parmar</string>
    <string name="owlbot_pronunciation">Pronunciation:</string>
    <string name="owlbot_example">Example: </string>
    <string name="owlbot_definition">Definition: </string>
    <string name="owlbot_save_definition">Save Definition</string>
    <string name="owlbot_delete_definition">Delete Definition</string>
    <string name="owlbot_back">Back</string>
    <string name="owlbot_enter_text_error">Please enter Search Text First</string>
    <string name="owlbot_no_saved_definition">No saved Definitions Found</string>
    <string name="owlbot_search_new_definitions">Search new Definitions</string>
    <string name="owlbot_change_language">Chnage Language to Hindi</string>
    <string name="owlbot_change_language_to_English">Change language to English</string>

    <string name="api_key_pexels">563492ad6f917000010000014fb852f35ab04474b564345ccba62a17</string>
    <string name="pexels_search">Pexels Search Image</string>
    <string name="pexels_saved">Pexels Saved Image</string>
    <string name="author_pexels">Karm Patel</string>
    <string name="pexels_version">Version: 1</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="help">Help</string>
    <string name="pexels_switch_language">Switch Language</string>
    <string name="pexels_ok">Ok</string>
    <string name="pexels_help_text">1. Enter Search keyword. 2. Click search to fetch Results. 3. You can save results by clicking and viewing detials.</string>
    <string name="pexels_search_hint">Enter Search Keyword</string>
    <string name="pexels_no_keword">Please enter search keyword</string>
    <string name="pexels_image_details">Image Details</string>
    <string name="pexels_photographer">Photographer</string>
    <string name="pexels_width">Image Width</string>
    <string name="pexels_height">Image Height</string>
    <string name="pexels_view_original_image">View Original Image</string>
    <string name="pexels_view_photographer">View Photographer</string>
    <string name="pexels_save">Save</string>
    <string name="pexels_delete">Delete</string>

    <!--    Carbon Dioxide Interface Project Strings-->
    <string name="author_carbon_dioxide">Kavan patel</string>
    <string name="version_carbon_dioxide">Version : 1</string>
    <string name="carbon_dioxide_search">Carbon Dioxide Estimate</string>
    <string name="carbon_dioxide_saved">Carbon Dioxide Saved Emissions</string>

    <string name="carbon_dioxide_help">1. Enter Vehicle Distance and click Search Maker\n
    2. From the provided list click on the maker\n
    3. From the provided model list click on the model\n
    4. You will receive the Carbon Dioxide Emission Estimate on your screen</string>
    <string name="carbon_dioxide_okay">Ok!</string>

    <string name="help">Help</string>
    <string name="carbon_dioxide_search_hint">Enter Distance (in KM)</string>
    <string name="carbon_dioxide_btn_search">Search Makers</string>
    <string name="carbon_dioxide_text_select_maker">Select Maker:</string>
    <string name="carbon_dioxide_text_select_model">Select Model:</string>
    <string name="carbon_dioxide_btn_calculate">Calculate Emission</string>
    <string name="carbon_dioxide_btn_reset_search">Reset Search</string>
    <string name="carbon_dioxide_btn_save">Save</string>
    <string name="emission_saved_success">Carbon Emission Saved Successfully</string>
    <string name="carbon_dioxide_btn_delete">Delete</string>
    <string name="carbon_dioxide_btn_back">Back</string>
    <string name="emission_delete_success">Carbon Emission Deleted Successfully</string>
    <string name="carbon_dioxide_no_save_found">No Saved Carbon Emission Estimates Found</string>

    <string name="apiKeyCarbonEmission">7wxKx0AAeNYLIkhPWXlAg</string>
    <string name="apiMakersUrl">https://www.carboninterface.com/api/v1/vehicle_makes</string>
    <string name="apiEstimatesUrl">https://www.carboninterface.com/api/v1/estimates</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="vehicle_model">Vehicle Model:</string>
    <string name="vehicle_maker">Vehicle Maker:</string>
    <string name="distance">Distance:</string>



    <string name="covid_side_nav_menu_search_info">Covid 19 Information Search</string>
    <string name="covid_side_nav_menu_saved_info">Covid 19 Saved Information</string>
    <string name="help">Help</string>
    <string name="covid_help_text">1. Select a date\n2.Hit Search\n3. You will see the data date wise, to see more information and to save click on it.</string>
    <string name="covid_loading">Loading Search Results...</string>
    <string name="covid_select_date">Select Date</string>
    <string name="covid_no_data">No Data Found!</string>
    <string name="covid_fatalities">Fatalities</string>
    <string name="covid_recoveries">Recoveries</string>
    <string name="covid_cases">Cases</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Clode Drawer</string>
    <string name="covid_okay">Ok</string>
    <string name="author_covid">Bhishmang Patel</string>
    <string name="version_covid">Version: 1</string>
    <string name="covid_hospitalization">Hospitalization</string>
    <string name="covid_vaccinations">Vaccinations</string>
    <string name="covid_back">Back</string>
    <string name="covid_save">Save</string>
    <string name="covid_delete">Delete</string>
    <string name="covid_delete_successful">Information Deleted Successful</string>
    <string name="covid_save_successful">Information Saved Successful</string>
    <string name="covid_change_language">Change Language</string>
</resources>