<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author_owlbot_dictionary"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_owlbot_dictionary"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/owlbot_dictionary_version"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginTop="5dp"/>

</LinearLayout>