<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".carbondioxideinterface.CarbonDioxideSearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/etDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:hint="@string/carbon_dioxide_search_hint"
            android:textSize="18sp"
            android:textStyle="bold"
            android:inputType="numberDecimal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSearchCarbonDioxide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carbon_dioxide_btn_search"
                android:layout_weight="1"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/btnResetSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/carbon_dioxide_btn_reset_search"
                android:layout_weight="1"/>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/layoutSelectMakers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/carbon_dioxide_text_select_maker"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMakers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSelectModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/carbon_dioxide_text_select_model"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewModels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>