<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        app:contentPadding="10dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_car"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vehicle_maker"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/tvVehicleMaker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Vehicle Maker"
                            android:textSize="16sp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vehicle_model"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/tvVehicleModel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Vehicle Model"
                            android:textSize="16sp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/distance"
                            android:textStyle="bold"
                            android:textSize="16sp"/>

                        <TextView
                            android:id="@+id/tvDistance"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Distance"
                            android:textSize="16sp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>